--- a/app/assets/templates/home.html
+++ b/app/assets/templates/home.html
@@ -1,1 +1,3 @@
 <h1>Home</h1>
+Signed in: <span ng-bind="session_resource.signedIn"></span>
+Current user id: <span ng-bind="currentUser.id"></span>
