--- a/app/assets/javascripts/angular-devise/app/router.js.erb
+++ b/app/assets/javascripts/angular-devise/app/router.js.erb
@@ -1,7 +1,8 @@
-// 
+//
 App.config(['$routeProvider', function($routeProvider) {
-  $routeProvider.when('/home', {templateUrl: '<%= asset_path "home.html" %>'});
+  $routeProvider.when('/home', {templateUrl: '<%= asset_path "home.html" %>', controller: 'MainController'});
   $routeProvider.when('/register', {templateUrl: '<%= asset_path "registrations/new.html" %>', controller: 'RegistrationsController'});
   $routeProvider.when('/login', {templateUrl: '<%= asset_path "sessions/new.html" %>', controller: 'SessionsController'});
+  $routeProvider.when('/logout', {templateUrl: '<%= asset_path "sessions/destroy.html" %>', controller: 'SessionsController'});
   $routeProvider.otherwise({redirectTo: '/home'});
 }]);
