--- a/app/assets/templates/home.html
+++ b/app/assets/templates/home.html
@@ -1,3 +1,4 @@
 <h1>Home</h1>
-Signed in: <span ng-bind="session_resource.signedIn"></span>
+Signed in: <span ng-bind="session_resource.signedIn()"></span>
+signedOut: <span ng-bind="session_resource.signedOut()"></span>
 Current user id: <span ng-bind="currentUser.id"></span>
