--- a/app/assets/javascripts/angular-sorcery/app/router.js.erb
+++ b/app/assets/javascripts/angular-sorcery/app/router.js.erb
@@ -1,6 +1,7 @@
 //
 App.config(['$routeProvider', function($routeProvider) {
   $routeProvider.when('/home', {templateUrl: '<%= asset_path "home.html" %>', controller: 'MainController'});
+  $routeProvider.when('/users_list', {templateUrl: '<%= asset_path "users.html" %>', controller: 'UsersController'});
   $routeProvider.when('/register', {templateUrl: '<%= asset_path "registrations/new.html" %>', controller: 'RegistrationsController'});
   $routeProvider.when('/login', {templateUrl: '<%= asset_path "sessions/new.html" %>', controller: 'SessionsController'});
   $routeProvider.when('/logout', {templateUrl: '<%= asset_path "sessions/destroy.html" %>', controller: 'SessionsController'});
