--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
                   <a class="brand" href="/"><%= image_tag("brand/brand.png", :size => "32x32") %></a>
                   <ul class="nav">
                     <li data-match-route="/(:?home)"><a href="/home">Home</a></li>
-
+                    <li data-match-route="/users_list"><a href="/users_list">Users</a></li>
                     <li data-match-route="/register" ng-show="session.signedOut()"><a href="/register">Sign up</a></li>
                     <li data-match-route="/login" ng-show="session.signedOut()"><a href="/login">Login</a></li>
                   </ul>
