Refactored sign in and currentUser, profile page

--- a/app/assets/templates/users.html
+++ b/app/assets/templates/users.html
@@ -3,5 +3,8 @@
 <ul>
   <li ng-repeat="user in users">
     {{user.email}}
+    <p ng-show="user.about.length > 0">
+      about: {{user.about}}
+    </p>
   </li>
 </ul>
