--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
                   <ul class="nav">
                     <li data-match-route="/(:?home)"><a href="/home">Home</a></li>
                     <li data-match-route="/users_list"><a href="/users_list">Users</a></li>
+                    <li data-match-route="/profile" ng-show="session.signedIn()"><a href="/profile">Profile</a></li>
                     <li data-match-route="/register" ng-show="session.signedOut()"><a href="/register">Sign up</a></li>
                     <li data-match-route="/login" ng-show="session.signedOut()"><a href="/login">Login</a></li>
                   </ul>
