--- a/app/assets/javascripts/angular-sorcery/app/app.js.erb
+++ b/app/assets/javascripts/angular-sorcery/app/app.js.erb
@@ -1,7 +1,7 @@
 // Declare app level module which depends on filters, and services
-angular.module('angularDevise.resources', ['ngResource']);
-angular.module('angularDevise.services', ['ngResource']);
-angular.module('angularDevise.directives', []);
-angular.module('angularDevise.filters', []);
-angular.module('angularDevise.controllers', ['ngCookies']);
-var App = angular.module('angularDevise', ['ng-rails-csrf','angularDevise.resources', 'angularDevise.services', 'angularDevise.directives', 'angularDevise.filters', 'angularDevise.controllers', '$strap.directives']);
+angular.module('angularSorcery.resources', ['ngResource']);
+angular.module('angularSorcery.services', ['ngResource']);
+angular.module('angularSorcery.directives', []);
+angular.module('angularSorcery.filters', []);
+angular.module('angularSorcery.controllers', ['ngCookies']);
+var App = angular.module('angularSorcery', ['ng-rails-csrf','angularSorcery.resources', 'angularSorcery.services', 'angularSorcery.directives', 'angularSorcery.filters', 'angularSorcery.controllers', '$strap.directives']);
